# BackTesting-App

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  publish.yml
backtester/: cli.py  profile_backtest.py
backtester/core/: analyzers.py  broker.py  context.py  datafeed.py  engine.py  enums.py  errors.py  result.py  settings.py  strategy_base.py  types.py
backtester/data/: AAPL_5Y.csv  NVDA_5Y.csv  sample_data.csv
backtester/docs/: api.rst  conf.py  index.rst  performance.rst
backtester/strategies/: buy_and_hold.py  donchian_breakout.py  ma_cross.py
backtester/tests/: conftest.py  test_analyzers.py  test_broker.py  test_datafeed.py  test_donchian_strategy.py  test_engine_strategies.py  test_result_series.py
