[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-app"
version = "0.2.0"
description = "Simple OHLCV backtesting engine for educational purposes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Dmitry T." }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.11",
  "sphinx>=7.2",
]

[project.urls]
Homepage = "https://github.com/lll-Dm1try-lll/BackTesting-App"

[project.scripts]
backtester-cli = "backtester.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backtester*"]
